@@ -6,6 +6,8 @@ linux (3.8.1-1~experimental.1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * linux-image: Increase minimum version of initramfs-tools to 0.110~
     which copes with the recently renamed EHCI and NFS modules
+  * genorig: Accept xz-compressed upstream tarballs and patches,
+    thanks to Sedat Dilek
 
   [ Aurelien Jarno ]
   * [mips/octeon] Change HW_RANDOM and HW_RANDOM_OCTEON to modules.
